# rules_terraform

./: MODULE.bazel
internal/: download.bzl
