module(
    name = "rules_terraform",
    version = "0.1.0",
    compatibility_level = 0,
    repo_name = "terraform_rules",
)

bazel_dep(name = "rules_go", version = "0.45.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.3")
